--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ reqwest = { version = "0.11.10", features = ["json", "gzip"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 thiserror = "1.0.31"
+
+[dev-dependencies]
+tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
